mcp-attr/tests/compile_fail/complete_wrong_first_arg.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/complete_wrong_first_arg.rs:5:1
  |
5 | #[complete_fn]
  | ^^^^^^^^^^^^^^ expected `i32`, found `&String`
6 | async fn complete_wrong_first_arg(value: i32, _cx: &RequestContext) -> Result<Vec<String>> {
  |          ------------------------ arguments to this function are incorrect
  |
note: function defined here
 --> tests/compile_fail/complete_wrong_first_arg.rs:6:10
  |
6 | async fn complete_wrong_first_arg(value: i32, _cx: &RequestContext) -> Result<Vec<String>> {
  |          ^^^^^^^^^^^^^^^^^^^^^^^^ ----------
  = note: this error originates in the attribute macro `complete_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
